# dephy-id-solana

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/actions/setup/: action.yml
.github/workflows/: main.yml  publish-rust-client.yml
PoC/: 00.generate_keys.sh  01.register_vendor.sh  02.register_product.sh  03.register_devices.sh  04.activate_device.sh  README.md  config.yml  utils.sh
cli/: Cargo.toml  README.md
cli/migration/: Cargo.toml
cli/migration/src/: lib.rs  m20240101_000001_create_table.rs  tx.rs
cli/src/: main.rs
clients/js/: .gitignore  README.md  package.json  pnpm-lock.yaml
clients/js/test/: _setup.ts  increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: constants.rs  lib.rs  utils.rs
clients/rust/tests/: create.rs  lib.rs
docs/wiki/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/wiki/blog/: authors.yml  tags.yml  welcome.md
examples/device_simulator/: README.md  package.json  tsconfig.json
examples/device_simulator/src/: activate.ts  generator.ts  info.ts  signer.ts  types.ts
examples/kwil/: .gitignore  Cargo.toml  README.md  generate-client.mjs  idl.json  keypair.json
examples/kwil/indexer/: .gitignore  bun.lockb  main.ts  package.json
examples/kwil/indexer/dbschema/edgeql-js/: __spec__.ts  castMaps.ts
examples/kwil/indexer/dbschema/edgeql-js/modules/: default.ts  schema.ts
examples/kwil/indexer/dbschema/migrations/: 00001-m1dcxyn.edgeql  00001-m1ueh3q.edgeql
examples/kwil/indexer/dbschema/queries/: getDID.edgeql
examples/kwil/indexer/scripts/: kwil.ts
examples/kwil/indexer/src/: dephy-id.ts  indexer.ts
examples/kwil/src/: assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
examples/signer_device/: README.md  package.json
examples/signer_device/src/: activate.ts  device.ts  generator.ts  types.ts  verifier.ts
examples/template/: Cargo.toml  README.md  keypair.json
examples/template/examples/template_cli/: main.rs
examples/template/src/: assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  pda.rs  processor.rs  state.rs  utils.rs
examples/template/tests/: functional.rs
explorer-ui/: .env.example  .eslintrc.cjs  README.md  codegen.ts  graphql.config.yaml  next.config.js  package.json  pnpm-lock.yaml
explorer-ui/src/: env.js  queries.ts
explorer-ui/src/components/: footer.tsx  header.tsx  layout.tsx  product.tsx
explorer-ui/src/gql/: gql.ts  graphql.ts
explorer-ui/src/pages/: _app.tsx  index.tsx  products.tsx  vendors.tsx
explorer-ui/src/styles/: globals.css
extensions/conduits/: .gitignore  Cargo.toml  README.md  package.json
extensions/conduits/program/: Cargo.toml  README.md  idl.json  keypair.json
extensions/conduits/program/src/: assertions.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
extensions/conduits/program/tests/: functional.rs
extensions/conduits/scripts/: generate-clients.mjs  start-validator.mjs
extensions/puppet/: .gitignore  .pnp.cjs  Anchor.toml  keypair.json  package.json  pnpm-lock.yaml
extensions/puppet/client/: index.ts
extensions/puppet/tests/: puppet.ts
extensions/wallet/: Cargo.toml  README.md  package.json
extensions/wallet/clients/js/: package.json
extensions/wallet/clients/js/src/: index.ts  utils.js
extensions/wallet/clients/js/test/: _setup.ts  proxy_call.test.ts
extensions/wallet/program/: Cargo.toml  README.md  idl.json
extensions/wallet/program/src/: instruction.rs  lib.rs  processor.rs  utils.rs
extensions/wallet/scripts/client/: test-js.mjs
indexer/: .env  .env.example  .gitignore  README.md  bun.lockb  env.ts  main.ts  package.json  run_and_keep_alive.sh
indexer/dbschema/: default.esdl
indexer/dbschema/edgeql-js/: __spec__.ts  castMaps.ts
indexer/dbschema/migrations/: 00001-m1jpfni.edgeql  00001-m1r56ui.edgeql  00001-m1uuxpq.edgeql  00001-m1xwtyi.edgeql  00002-m1dpxko.edgeql  00002-m1v34vs.edgeql  00003-m16hmfh.edgeql  00004-m1y4v37.edgeql  00005-m15kthi.edgeql  00005-m1aiwm6.edgeql
indexer/dbschema/queries/: getDID.edgeql  getDID.query.ts  getDevice.edgeql  index.ts  (+11 more)
indexer/scripts/: kwil.ts
indexer/src/: dephy-id.ts  indexer.ts
patches/: @kinobi-so__renderers-rust@0.21.7.patch  @metaplex-foundation__kinobi@0.19.2.patch
program/: Cargo.toml  README.md  idl.json  keypair.json
program/src/: assertions.rs  constants.rs  ed25519.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  secp256k1.rs  state.rs  utils.rs
program/tests/: functional.rs  lib.rs
samples/signer_device/: README.md  package.json
scripts/: generate-clients.mjs  generate-idls.mjs  generate_demo_keys.sh  test_all.sh  utils.mjs
scripts/ci/: set-env.mjs
scripts/program/: build.mjs  test.mjs
templates/product-program/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
templates/product-program/.github/workflows/: main.yml
templates/product-program/cli/: Cargo.toml  README.md
templates/product-program/cli/src/: main.rs
templates/product-program/clients/js/: README.md  package.json
templates/product-program/clients/rust/: Cargo.toml  README.md
templates/product-program/clients/rust/src/: lib.rs
templates/product-program/clients/rust/tests/: create.rs  lib.rs
templates/product-program/program/: Cargo.toml  README.md  idl.json  keypair.json
templates/product-program/program/src/: assertions.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
templates/product-program/program/tests/: lib.rs
templates/product-program/scripts/: generate-clients.mjs
ui/: README.md  app.imba  graphql-codegen.ts  index.html  package.json
ui/src/: constants.imba  device-page.imba  gql.ts  main.imba  pda.imba  product-page.imba  product.imba  products-page.imba  pubkey.imba  queries.ts  vendor-page.imba  wallet.imba
wallet/: Cargo.toml  README.md  package.json
wallet/program/: Cargo.toml  idl.json  keypair.json
wallet/scripts/: generate-clients.mjs  generate-idls.mjs  start-validator.mjs
(+78 files in other folders)
