[workspace.package]
authors = ["DePHY dev team"]
homepage = "https://dephy.id"
repository = "https://github.com/dephy-io/dephy-id"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = [
    "program",
    "clients/rust",
    "cli",
    "examples/kwil",
]

[workspace.dependencies]
borsh = "1.5.0"
shank = "0.4.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "1.18.14"
thiserror = "1.0.61"
serde = "1.0.202"
serde_with = "3.8.1"
assert_matches = "1.5.0"
solana-program-test = "1.18.14"
solana-sdk = "1.18.14"
solana-client = "1.18.14"
spl-associated-token-account = "3.0.2"
spl-token-2022 = "3.0.2"
spl-token-metadata-interface = "0.3.3"
ed25519-dalek = "1.0.1"
libsecp256k1 = "0.7.1"
clap = "4.5.4"
arrayref = "*"
curve25519-dalek = { version = "4", default-features = false }
solana-zk-token-sdk = "1.18"
sha2 = "0.10"
