[workspace]
resolver = "2"
members = [
    "program",
    "clients/rust",
    "cli",
    "examples/kwil"
]
exclude = [
    "extensions",
    "templates",
]

[workspace.package]
authors = ["DePHY dev team"]
homepage = "https://dephy.id"
repository = "https://github.com/dephy-io/dephy-id"
license = "Apache-2.0"

[workspace.metadata.cli]
solana = "1.18.25"

[workspace.dependencies]
anchor-lang = "0.30.1"
borsh = "1.5.1"
shank = "0.4.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.64"
serde = "1.0.210"
serde_with = "3.10.0"
assert_matches = "1.5.0"
solana-program = "2.0.13"
solana-program-test = "2.0.13"
solana-sdk = "2.0.13"
solana-client = "2.0.13"
solana-zk-token-sdk = "2.0.13"
spl-token-2022 = "5.0.2"
spl-associated-token-account = "5.0.1"
spl-token-metadata-interface = "0.5.1"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.7.1"
clap = "4.5.4"
arrayref = "*"
curve25519-dalek = { version = "4.1.3", default-features = false }
sha2 = "0.10.8"
hex = "0.4.3"
