[workspace]

[package]
name = "dephy-cli"
version = "0.1.0"
edition = "2021"
publish = false

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"


[dependencies]
dephy-io-dephy-id-client = { path = "../clients/rust" }
solana-sdk = "~1.18"
solana-client = "~1.18"
spl-token-2022 = "^3.0"
spl-associated-token-account = { version = "^3.0", features = ["no-entrypoint"] }
clap = { version = "4.5.4", features = ["derive"] }

tokio = { version = "1", features = [] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls" ] }
migration = { path = "migration"}
serde_json = "^1.0"

[[bin]]
name = "indexer"
