[package]
name = "dephy-cli"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
dephy-io-dephy-id-client = { path = "../clients/rust" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }

