[package]
name = "dephy-io-dephy-id"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "hdMghjD73uASxgJXi6e1mGPsXqnADMsrqB1bveqABP1"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^1.4"
shank = "^0.4.2"
num-derive = "^0.4"
num-traits = "^0.2"
thiserror = "^1.0"
solana-program = "~1.18"
spl-token-2022 = "^3.0"
spl-token-metadata-interface = "^0.3"
spl-associated-token-account = { version = "^3.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "~1.18"
solana-sdk = "~1.18"
tokio = "^1.37"
