[package]
name = "dephy-id-program"
version = "0.0.1"
description = "The DePHY ID Solana program."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"
publish = false

[package.metadata.solana]
program-id = "hdMghjD73uASxgJXi6e1mGPsXqnADMsrqB1bveqABP1"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { workspace = true }
shank = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-program = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-token-metadata-interface = { workspace = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
thiserror = { workspace = true }
curve25519-dalek = { workspace = true, features = ["digest"]}
solana-zk-token-sdk = { workspace = true, optional = true }
sha2 = { workspace = true }
arrayref = { workspace = true }
libsecp256k1 = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
ed25519-dalek = { workspace = true }

[features]
ed25519-sign = ["solana-zk-token-sdk"]
test-sbf = []
