[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = "^0.12"
serde_json = "^1.0"

[dependencies.sea-orm-migration]
version = "^0.12"
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-native-tls"
]
