[package]
name = "dephy-io-dephy-id-client"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
solana-program = { workspace = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
