[package]
name = "dephy-id-program-client"
version = "0.0.1"
description = "Client SDK for the DePHY ID Solana program"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_with = { workspace = true, optional = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
spl-token-2022 = { workspace = true }
spl-associated-token-account = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }

[features]
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["dep:anchor-lang"]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]
