[package]
name = "dephy-io-dephy-template"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "D6QAaYRpbRXhWicCbF6knEGmoLXiAvG8MsT77ZtKNo3K"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { workspace = true }
shank = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
solana-program = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
dephy-id-program-client = { path = "../../clients/rust" }
