[workspace]
resolver = "2"
members = ["program"]

[workspace.package]
authors = ["DePHY dev team"]
homepage = "https://dephy.id"
repository = "https://github.com/dephy-io/dephy-id"
license = "Apache-2.0"

[workspace.metadata.solana]
external-programs-output = "../../target/deploy"

[workspace.dependencies]
borsh = "1.5.1"
shank = "0.4.2"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.0.1"
thiserror = "1.0.61"
dephy-id-program-client = { path = "../../clients/rust" }
spl-token-2022 = "4.0.0"
spl-associated-token-account = "4.0.0"
spl-token-metadata-interface = "0.4.0"
