[workspace]
resolver = "2"
members = ["clients/rust", "program"]

[workspace.dependencies]
assert_matches = "1.5.0"
borsh = "1.5.1"
shank = "0.4.2"
serde = "1.0.203"
serde_with = "3.8.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.61"
solana-sdk = "2.0.0"
solana-program = "2.0.0"
solana-program-test = "2.0.0"
spl-token-2022 = "3.0.2"
spl-token-metadata-interface = "0.3.3"
spl-associated-token-account = "3.0.2"
dephy-id-program-client = { path = "../../clients/rust" }
