[workspace]
resolver = "2"
members = ["program", "clients/rust", "cli"]

[workspace.package]
authors = ["DePHY dev team"]
homepage = "https://dephy.id"
repository = "https://github.com/dephy-io/dephy-id"
license = "MIT"

[workspace.dependencies]
assert_matches = "1.5.0"
borsh = "1.5.1"
clap = "4.5.4"
shank = "0.4.2"
serde = "1.0.203"
serde_with = "3.8.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.61"
solana-sdk = "2.0.1"
solana-client = "2.0.1"
solana-program = "2.0.1"
solana-program-test = "2.0.1"
spl-token-2022 = "4.0.0"
spl-token-metadata-interface = "0.4.0"
spl-associated-token-account = "4.0.0"
dephy-id-program-client = { path = "../../clients/rust" }
