[package]
name = "dephy-io-conduits"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "29V5YJFAMQuN8npySW2Kds8zwf6zPTpJ49LyYv1jSGQQ"
program-dependencies = []
account-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^1.5"
shank = "^0.4.2"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "^2.0.7"
thiserror = "^1.0"
spl-token = "6.0.0"
spl-token-2022 = "^4.0.0"
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.4.0"

[dependencies.dephy-id-program]
path = "../../../program"

[dev-dependencies]
solana-program-test = "^2.0.7"
solana-sdk = "^2.0.7"
