[package]
name = "dephy-id-wallet"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "5ZYZAwmhpkVUbXQWmzEnBCBRxiWdEcYYykwyApWJdEUv"
account-dependencies = []

[package.metadata.solana.program-dependencies]
dephy_id_program = "hdMghjD73uASxgJXi6e1mGPsXqnADMsrqB1bveqABP1"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.1"
shank = "^0.4.2"
num-derive = "0.4.2"
num-traits = "^0.2"
solana-program = "~2.0"
thiserror = "^1.0"
dephy-id-program-client = { path = "../../../clients/rust" }
spl-token-2022 = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.4.0"

