[package]
name = "dephy-id-wallet"
version = "0.0.1"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"
publish = false

[package.metadata.solana]
program-id = "5ZYZAwmhpkVUbXQWmzEnBCBRxiWdEcYYykwyApWJdEUv"
account-dependencies = []

[package.metadata.solana.program-dependencies]
dephy_id_program = "hdMghjD73uASxgJXi6e1mGPsXqnADMsrqB1bveqABP1"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { workspace = true }
shank = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }
dephy-id-program-client = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"] }
spl-token-metadata-interface = { workspace = true }

